Fix headers getting squashed on smaller resolutions.

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -38,3 +38,7 @@
   text-decoration: underline;
   text-decoration-style: dotted;
 }
+
+.minwidth {
+  min-width: fit-content;
+}
